scaling refactoring for enemies